--- a/index.html
+++ b/index.html
@@ -38,29 +38,31 @@
         <div class="group">
           <div class="item">
             <form>
-              <div class="item item-double">
-                <label for="location">Location</label>
-                <input id="location" type="text" name="location" placeholder="Search destination">
-              </div>
-              <div class="item item-double">
-                <label for="arrive">Arrive</label>
-                <input id="arrive" type="date" name="arrive">
-              </div>
-              <div class="item item-double">
-                <label for="depart">Depart</label>
-                <input id="depart" type="date" name="depart">
-              </div>
-              <div class="item item-double">
-                <label for="type">Type</label>
-                <select name="type" id="type" size="1">
-                  <option value="apartment">Apartment</option>
-                  <option value="barn">Barn</option>
-                  <option value="castle">Castle</option>
-                  <option value="houseboat">Houseboat</option>
-                  <option value="tiny-house">Tiny House</option>
-                  <option value="yacht">Yacht</option>
-                  <option value="yurt">Yurt</option>
-                </select>
+              <div class="form-items">
+                <div class="item item-double">
+                  <label for="location">Location</label>
+                  <input id="location" type="text" name="location" placeholder="Search destination">
+                </div>
+                <div class="item item-double">
+                  <label for="arrive">Arrive</label>
+                  <input id="arrive" type="date" name="arrive">
+                </div>
+                <div class="item item-double">
+                  <label for="depart">Depart</label>
+                  <input id="depart" type="date" name="depart">
+                </div>
+                <div class="item item-double">
+                  <label for="type">Type</label>
+                  <select name="type" id="type" size="1">
+                    <option value="apartment">Apartment</option>
+                    <option value="barn">Barn</option>
+                    <option value="castle">Castle</option>
+                    <option value="houseboat">Houseboat</option>
+                    <option value="tiny-house">Tiny House</option>
+                    <option value="yacht">Yacht</option>
+                    <option value="yurt">Yurt</option>
+                  </select>
+                </div>
               </div>
               <button type="submit">Search</button>
             </form>
